--- a/person.scss
+++ b/person.scss
@@ -73,7 +73,7 @@
 
   &__name {
     display: block;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
   
   &__extra {
